WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
106199
[Track] Rendering crash
https://bugs.webkit.org/show_bug.cgi?id=106199
Summary
[Track] Rendering crash
Victor Carbune
Reported
2013-01-06 15:04:38 PST
I'm currently still looking at what recent changes might have generated this assertion fail (basically the first child is not necessarily inline rendered). #0 0x00007f81c0dde895 in WebCore::toRenderInline (object=0x7f81ac5c5eb8) at ../../third_party/WebKit/Source/WebCore/rendering/RenderInline.h:191 #1 0x00007f81c101ef63 in WebCore::RenderTextTrackCue::initializeLayoutParameters (this=0x7f81aca7ee18, firstLineBox=@0x7fff6049e4e0, step=..., position=...) at ../../third_party/WebKit/Source/WebCore/rendering/RenderTextTrackCue.cpp:60 #2 0x00007f81c101edce in WebCore::RenderTextTrackCue::repositionCueSnapToLinesSet (this=0x7f81aca7ee18) at ../../third_party/WebKit/Source/WebCore/rendering/RenderTextTrackCue.cpp:203 #3 0x00007f81c101ed5f in WebCore::RenderTextTrackCue::layout (this=0x7f81aca7ee18) at ../../third_party/WebKit/Source/WebCore/rendering/RenderTextTrackCue.cpp:49 #4 0x00007f81c0dbf156 in WebCore::RenderObject::layoutIfNeeded (this=0x7f81aca7ee18) at ../../third_party/WebKit/Source/WebCore/rendering/RenderObject.h:675 #5 0x00007f81c0e02c11 in WebCore::RenderBlock::layoutPositionedObjects (this=0x7f81ac2b6698, relayoutChildren=true) at ../../third_party/WebKit/Source/WebCore/rendering/RenderBlock.cpp:2646 #6 0x00007f81c0e002ea in WebCore::RenderBlock::layoutBlock (this=0x7f81ac2b6698, relayoutChildren=true, pageLogicalHeight=...) [...]
Attachments
Track added through JS
(363 bytes, text/html)
2013-01-06 15:05 PST
,
Victor Carbune
no flags
Details
Patch
(5.52 KB, patch)
2013-01-07 10:11 PST
,
Victor Carbune
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Victor Carbune
Comment 1
2013-01-06 15:05:48 PST
Created
attachment 181466
[details]
Track added through JS
Victor Carbune
Comment 2
2013-01-07 10:11:40 PST
Created
attachment 181518
[details]
Patch
Eric Carlson
Comment 3
2013-01-07 10:55:14 PST
Comment on
attachment 181518
[details]
Patch Thanks!
WebKit Review Bot
Comment 4
2013-01-07 11:22:28 PST
Comment on
attachment 181518
[details]
Patch Clearing flags on attachment: 181518 Committed
r138966
: <
http://trac.webkit.org/changeset/138966
>
WebKit Review Bot
Comment 5
2013-01-07 11:22:31 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug